--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "netguru-heroes",
+  "name": "app-name",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,27 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/css": "^11.1.3",
+    "@emotion/react": "^11.1.5",
+    "@emotion/server": "^11.0.0",
+    "@emotion/styled": "^11.3.0",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@emotion/babel-plugin": "^11.3.0",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
+    "babel-plugin-macros": "^3.0.1",
+    "eslint": "^7.23.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "postcss": "^8.2.9",
+    "tailwindcss": "^2.1.1",
+    "twin.macro": "^2.3.2",
+    "typescript": "^4.2.4"
   }
 }
