--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,10 +21,12 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
-    "react/no-unescaped-entities": ["error", {"forbid": [">", "}"]}],
+    "react/no-unescaped-entities": ["error", { "forbid": [">", "}"] }],
+    "react/display-name": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/ban-ts-comment": "off",
-    "@typescript-eslint/explicit-module-boundary-types": "off"
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-empty-function": "off"
   },
   "settings": {
     "react": {
