--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -20,23 +22,33 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
+    "@babel/preset-env": "^7.13.15",
     "@emotion/babel-plugin": "^11.3.0",
     "@emotion/babel-plugin-jsx-pragmatic": "^0.1.5",
     "@storybook/addon-actions": "^6.2.8",
     "@storybook/addon-essentials": "^6.2.8",
     "@storybook/addon-links": "^6.2.8",
     "@storybook/react": "^6.2.8",
+    "@testing-library/dom": "^7.30.3",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-macros": "^3.0.1",
     "eslint": "^7.23.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
     "postcss": "^8.2.9",
+    "react-test-renderer": "^17.0.2",
     "tailwindcss": "^2.1.1",
+    "ts-jest": "^26.5.5",
     "twin.macro": "^2.3.2",
     "typescript": "^4.2.4"
   }
