--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start",
     "test": "jest",
     "test:watch": "jest --watch",
+    "cypress": "cypress run",
+    "cypress:open": "cypress open",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -23,12 +25,15 @@
   "devDependencies": {
     "@babel/core": "^7.13.16",
     "@babel/preset-env": "^7.13.15",
+    "@cypress/react": "^5.3.3",
+    "@cypress/webpack-dev-server": "^1.1.3",
     "@emotion/babel-plugin": "^11.3.0",
     "@emotion/babel-plugin-jsx-pragmatic": "^0.1.5",
     "@storybook/addon-actions": "^6.2.8",
     "@storybook/addon-essentials": "^6.2.8",
     "@storybook/addon-links": "^6.2.8",
     "@storybook/react": "^6.2.8",
+    "@testing-library/cypress": "^7.0.6",
     "@testing-library/dom": "^7.30.3",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
@@ -40,7 +45,9 @@
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-macros": "^3.0.1",
+    "cypress": "^7.1.0",
     "eslint": "^7.23.0",
+    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "identity-obj-proxy": "^3.0.0",
